[gd_scene load_steps=2 format=3 uid="uid://iw2wohbdu57"]

[ext_resource type="Script" uid="uid://ka2kwnckn1ny" path="res://waves/waveLogic/mob_spawner.gd" id="1_mqkga"]

[node name="MobSpawner" type="Node2D"]
script = ExtResource("1_mqkga")

[node name="NextWaveTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true
autostart = true

[node name="NextMobTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="NextWaveTimer" to="." method="_on_next_wave_timer_timeout"]
[connection signal="timeout" from="NextMobTimer" to="." method="_on_next_mob_timer_timeout"]
